<resources>
    <string name="app_name">PHARMA CIA</string>
    <string name="loading_Pharma">Loading Pharmacies!</string>
    <string name="Google_API_Key" translatable="false">AIzaSyC7RHd_WWCTD3xfnI6SlAMIIdP6HbkECxo</string>


    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="iva" translatable="false">Partita IVA</string>
    <string name="city">City</string>
    <string name="subcity">Subcity</string>
    <string name="provence">Provence</string>
    <string name="region">Region</string>
    <string name="dateStart">Activity started on</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>

    <string name="addToFavourites">Add to Favourites!</string>
    <string name="removeFromFavourites">Remove from Favourites!</string>
    <string name="showOnMap">Show on Map!</string>

    <string name="needLocationPermissions">This app needs you to grant Location Permissions in order to work correctly</string>

    <string name="showFavourite">Show Favourites</string>
    <string name="showInCity">Show in current city</string>

</resources>
